--- a/style.css
+++ b/style.css
@@ -1285,7 +1285,7 @@ a {
   display: none;
   left: 0;
   position: absolute;
-  top: 60px;
+  top: 61px;
   z-index: 10; }
   #fullscreen-search .container {
     left: 50%;
@@ -1302,39 +1302,42 @@ a {
     letter-spacing: .2em;
     text-align: center;
     text-transform: uppercase; }
-  #fullscreen-search form input[type="search"] {
-    background: transparent;
-    border: 0;
-    color: #626262;
-    display: inline-block;
-    font-size: 32px;
-    max-width: 493px;
-    outline: none; }
-    @media (max-width: 768px) {
-      #fullscreen-search form input[type="search"] {
-        font-size: 24px;
-        padding-left: 0; } }
-  #fullscreen-search form button[type="submit"] {
-    border: none;
-    display: inline-block;
-    outline: none;
-    padding: 0;
-    position: absolute;
-    right: 0;
-    top: 90px; }
-    @media (max-width: 768px) {
-      #fullscreen-search form button[type="submit"] {
-        top: 82px; } }
-    #fullscreen-search form button[type="submit"] svg {
-      fill: #adadad;
-      height: 31px;
-      width: 32px; }
+  #fullscreen-search form {
+    position: relative; }
+    #fullscreen-search form input[type="search"] {
+      background: transparent;
+      border: 0;
+      color: #626262;
+      display: inline-block;
+      font-size: 32px;
+      max-width: 493px;
+      outline: none; }
       @media (max-width: 768px) {
-        #fullscreen-search form button[type="submit"] svg {
-          height: 24px; } }
-      @media (max-width: 480px) {
-        #fullscreen-search form button[type="submit"] svg {
-          display: none; } }
+        #fullscreen-search form input[type="search"] {
+          font-size: 24px;
+          max-width: 100%;
+          padding-left: 0; } }
+    #fullscreen-search form button[type="submit"] {
+      border: none;
+      display: inline-block;
+      outline: none;
+      padding: 0;
+      position: absolute;
+      right: 0;
+      top: 32px; }
+      @media (max-width: 768px) {
+        #fullscreen-search form button[type="submit"] {
+          top: 24px; } }
+      #fullscreen-search form button[type="submit"] svg {
+        fill: #adadad;
+        height: 31px;
+        width: 32px; }
+        @media (max-width: 768px) {
+          #fullscreen-search form button[type="submit"] svg {
+            height: 24px; } }
+        @media (max-width: 480px) {
+          #fullscreen-search form button[type="submit"] svg {
+            display: none; } }
 
 /*--------------------------------------------------------------
 ## Posts and pages
