Post tag responsive

--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -146,7 +146,7 @@
 		display: inline-block;
 		@include font-size(0.8666);
 		line-height: normal;
-		margin-right: 0.4615em;
+		margin: 0 0.4615em 0.4615em 0;
 		padding: 0.6153em 0.7692em;
 		text-decoration: none;
 
