--- a/style.css
+++ b/style.css
@@ -1360,7 +1360,8 @@ a {
 .page-content,
 .entry-content,
 .entry-summary {
-  margin: 2em 0 0; }
+  margin: 2em 0 0;
+  overflow-x: auto; }
 
 .entry {
   margin-bottom: 5em; }
