Add fonts settings

--- a/sass/modules/_widgets.scss
+++ b/sass/modules/_widgets.scss
@@ -133,7 +133,7 @@
 	}
 	
 	.post-date {
-		color: $color__text-meta;
+		color: $color__text-light;
 		display: block;
 		@include font-size(0.8);
 		padding-top: 0.5em;
