--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -396,7 +396,7 @@ $sel: '';
 
 		.sub-title {
 			border-bottom: 2px solid $color__background-hr-dark;
-			color: $color__text-meta;
+			color: $color__text-light;
 			display: inline-block;
 			font-family: $font__details;
 			@include font-size(0.8666);
