--- a/sass/forms/_fields.scss
+++ b/sass/forms/_fields.scss
@@ -14,7 +14,7 @@ input[type="datetime"],
 input[type="datetime-local"],
 input[type="color"],
 textarea {
-	color: $color__text-meta;
+	color: $color__text-light;
 	border: 1px solid $color__background-hr-dark;
 
 	&:focus {
