--- a/sass/variables-site/_colors.scss
+++ b/sass/variables-site/_colors.scss
@@ -16,6 +16,6 @@ $color__primary-accent: #24c48a;
 $color__primary-accent-dark: #00a76a;
 
 // Text colors.
-$color__text-meta: #adadad;
+$color__text-light: #adadad;
 $color__text-medium: #626262;
 $color__text-dark: #2d2d2d;
