Add masthead padding setting and color defaults

--- a/sass/variables-site/_structure.scss
+++ b/sass/variables-site/_structure.scss
@@ -3,6 +3,7 @@ $size__site-main: 100%;
 $size__site-sidebar: 25.614035087719%;
 
 // Masthead.
+$masthead__padding: 60px;
 $masthead__bottom-margin: 80px;
 
 // Footer.
