Added basic styling to WooCommerce product

--- a/sass/woocommerce.scss
+++ b/sass/woocommerce.scss
@@ -3,6 +3,11 @@
 @import "mixins/bourbon";
 
 /*--------------------------------------------------------------
+# WooCommerce Single Product
+--------------------------------------------------------------*/
+@import "woocommerce/product";
+
+/*--------------------------------------------------------------
 # WooCommerce Checkout
 --------------------------------------------------------------*/
 @import "woocommerce/checkout";
