--- a/sass/woocommerce/_product.scss
+++ b/sass/woocommerce/_product.scss
@@ -4,13 +4,13 @@
 		margin-top: 0;
 
 		.product_title {
+			font-size: 20px;
 			text-align: left;
-			font-size: 1.3em;
 		}
 
 		.price {
-			font-size: 1.3em;
-			margin-bottom: 1em;
+			font-size: 20px;
+			margin-bottom: 15px;
 
 			del,
 			del .amount {
@@ -25,19 +25,64 @@
 
 		p {
 			color: $color__text-medium;
-			font-size: 0.85em;
-			line-height: 1.75em;
 		}
 
 		.cart {
 			button {
-				text-transform: uppercase;
-				font-size: 0.85em;
 				background-color: $color__primary-accent;
 				border-radius: 0;
+				font-size: 10px;
+				padding: 15px 20px;
+				text-transform: uppercase;
 
 				&:hover {
 					background-color: $color__primary-accent-dark;
+				}
+			}
+
+			.quantity.button-controls {
+				@include clearfix;
+
+				.qty {
+					-moz-appearance: textfield;
+					border-color: $color__text-light;
+					border-radius: 0;
+					border-width: 1px;
+					color: $color__text-medium;
+					float: left;
+					height: 40px;
+					padding: 0;
+					width: 40px;
+
+					&::-webkit-inner-spin-button,
+					&::-webkit-outer-spin-button {
+						-webkit-appearance: none;
+						margin: 0;
+					}
+				}
+
+				.add,
+				.subtract {
+					background: #f9f9f9;
+					border-color: $color__text-light;
+					border-radius: 0;
+					border-width: 1px;
+					float: left;
+					height: 40px;
+					padding: 6px 10px;
+					width: 40px;
+
+					&:hover {
+						background: darken( #f9f9f9, 20%);
+					}
+				}
+
+				.subtract {
+					border-right: none;
+				}
+
+				.add {
+					border-left: none;
 				}
 			}
 		}
