--- a/woocommerce.css
+++ b/woocommerce.css
@@ -4,11 +4,11 @@
 .woocommerce.single-product #content div.product .entry-summary {
   margin-top: 0; }
   .woocommerce.single-product #content div.product .entry-summary .product_title {
-    text-align: left;
-    font-size: 1.3em; }
+    font-size: 20px;
+    text-align: left; }
   .woocommerce.single-product #content div.product .entry-summary .price {
-    font-size: 1.3em;
-    margin-bottom: 1em; }
+    font-size: 20px;
+    margin-bottom: 15px; }
     .woocommerce.single-product #content div.product .entry-summary .price del,
     .woocommerce.single-product #content div.product .entry-summary .price del .amount {
       color: #adadad; }
@@ -16,16 +16,49 @@
     .woocommerce.single-product #content div.product .entry-summary .price ins {
       color: #24c48a; }
   .woocommerce.single-product #content div.product .entry-summary p {
-    color: #626262;
-    font-size: 0.85em;
-    line-height: 1.75em; }
+    color: #626262; }
   .woocommerce.single-product #content div.product .entry-summary .cart button {
-    text-transform: uppercase;
-    font-size: 0.85em;
     background-color: #24c48a;
-    border-radius: 0; }
+    border-radius: 0;
+    font-size: 10px;
+    padding: 15px 20px;
+    text-transform: uppercase; }
     .woocommerce.single-product #content div.product .entry-summary .cart button:hover {
       background-color: #00a76a; }
+  .woocommerce.single-product #content div.product .entry-summary .cart .quantity.button-controls::after {
+    clear: both;
+    content: "";
+    display: table; }
+  .woocommerce.single-product #content div.product .entry-summary .cart .quantity.button-controls .qty {
+    -moz-appearance: textfield;
+    border-color: #adadad;
+    border-radius: 0;
+    border-width: 1px;
+    color: #626262;
+    float: left;
+    height: 40px;
+    padding: 0;
+    width: 40px; }
+    .woocommerce.single-product #content div.product .entry-summary .cart .quantity.button-controls .qty::-webkit-inner-spin-button, .woocommerce.single-product #content div.product .entry-summary .cart .quantity.button-controls .qty::-webkit-outer-spin-button {
+      -webkit-appearance: none;
+      margin: 0; }
+  .woocommerce.single-product #content div.product .entry-summary .cart .quantity.button-controls .add,
+  .woocommerce.single-product #content div.product .entry-summary .cart .quantity.button-controls .subtract {
+    background: #f9f9f9;
+    border-color: #adadad;
+    border-radius: 0;
+    border-width: 1px;
+    float: left;
+    height: 40px;
+    padding: 6px 10px;
+    width: 40px; }
+    .woocommerce.single-product #content div.product .entry-summary .cart .quantity.button-controls .add:hover,
+    .woocommerce.single-product #content div.product .entry-summary .cart .quantity.button-controls .subtract:hover {
+      background: #c6c6c6; }
+  .woocommerce.single-product #content div.product .entry-summary .cart .quantity.button-controls .subtract {
+    border-right: none; }
+  .woocommerce.single-product #content div.product .entry-summary .cart .quantity.button-controls .add {
+    border-left: none; }
 
 /*--------------------------------------------------------------
 # WooCommerce Checkout
@@ -164,6 +197,38 @@
   @media screen and (max-width: 768px) {
     .woocommerce-cart form table.shop_table {
       padding: 1em; } }
+  .woocommerce-cart form table.shop_table .quantity.button-controls::after {
+    clear: both;
+    content: "";
+    display: table; }
+  .woocommerce-cart form table.shop_table .quantity.button-controls .qty {
+    border-radius: 0;
+    width: 2em;
+    float: left;
+    height: 26px;
+    padding: 0;
+    -moz-appearance: textfield;
+    border-color: #adadad;
+    border-width: 1px;
+    color: #626262; }
+    .woocommerce-cart form table.shop_table .quantity.button-controls .qty::-webkit-inner-spin-button, .woocommerce-cart form table.shop_table .quantity.button-controls .qty::-webkit-outer-spin-button {
+      -webkit-appearance: none;
+      margin: 0; }
+  .woocommerce-cart form table.shop_table .quantity.button-controls .add,
+  .woocommerce-cart form table.shop_table .quantity.button-controls .subtract {
+    border-radius: 0;
+    border-color: #adadad;
+    border-width: 1px;
+    background: #f9f9f9;
+    float: left;
+    padding: 6px 10px; }
+    .woocommerce-cart form table.shop_table .quantity.button-controls .add:hover,
+    .woocommerce-cart form table.shop_table .quantity.button-controls .subtract:hover {
+      background: #c6c6c6; }
+  .woocommerce-cart form table.shop_table .quantity.button-controls .subtract {
+    border-right: none; }
+  .woocommerce-cart form table.shop_table .quantity.button-controls .add {
+    border-left: none; }
   .woocommerce-cart form table.shop_table thead th {
     font-weight: normal;
     text-transform: uppercase;
@@ -282,43 +347,3 @@
     .woocommerce-cart .wc-proceed-to-checkout a.checkout-button {
       width: 100%;
       margin-bottom: 10px; } }
-
-/*--------------------------------------------------------------
-# WooCommerce Elements
---------------------------------------------------------------*/
-.woocommerce .quantity.button-controls::after {
-  clear: both;
-  content: "";
-  display: table; }
-
-.woocommerce .quantity.button-controls .qty {
-  border-radius: 0;
-  width: 2em;
-  float: left;
-  height: 26px;
-  padding: 0;
-  -moz-appearance: textfield;
-  border-color: #adadad;
-  border-width: 1px;
-  color: #626262; }
-  .woocommerce .quantity.button-controls .qty::-webkit-inner-spin-button, .woocommerce .quantity.button-controls .qty::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-    margin: 0; }
-
-.woocommerce .quantity.button-controls .add,
-.woocommerce .quantity.button-controls .subtract {
-  border-radius: 0;
-  border-color: #adadad;
-  border-width: 1px;
-  background: #f9f9f9;
-  float: left;
-  padding: 6px 10px; }
-  .woocommerce .quantity.button-controls .add:hover,
-  .woocommerce .quantity.button-controls .subtract:hover {
-    background: #c6c6c6; }
-
-.woocommerce .quantity.button-controls .subtract {
-  border-right: none; }
-
-.woocommerce .quantity.button-controls .add {
-  border-left: none; }
