--- a/sass/woocommerce/_product.scss
+++ b/sass/woocommerce/_product.scss
@@ -4,8 +4,13 @@
 		margin-top: 0;
 
 		.product_title {
-			font-size: 20px;
+			font-size: 30px;
 			text-align: left;
+			margin: 20px 0;
+		}
+
+		.woocommerce-product-rating {
+			margin-bottom: 0;
 		}
 
 		.price {
@@ -31,8 +36,9 @@
 			button {
 				background-color: $color__primary-accent;
 				border-radius: 0;
-				font-size: 10px;
-				padding: 15px 20px;
+				font-size: 14px;
+				margin-left: 15px;
+				padding: 13px 20px;
 				text-transform: uppercase;
 
 				&:hover {
