--- a/sass/woocommerce/_product.scss
+++ b/sass/woocommerce/_product.scss
@@ -1,5 +1,17 @@
 .woocommerce.single-product #content div.product {
 
+	span.onsale {
+		background-color: $color__primary-accent;
+		border-radius: 0;
+		left: 4px;
+		line-height: normal;
+		min-height: 0;
+		padding: 6px 15px;
+		text-transform: uppercase;
+		top: 4px;
+		z-index: 10;
+	}
+
 	.entry-summary {
 		margin-top: 0;
 
@@ -89,6 +101,38 @@
 
 				.add {
 					border-left: none;
+				}
+			}
+		}
+	}
+
+	.images {
+		.product-images-slider {
+			margin-bottom: 20px;
+		}
+
+		.product-images-carousel {
+			border: 0;
+			padding: 0 30px;
+
+			.slide {
+				cursor: pointer;
+				opacity : 0.7;
+
+				&.flex-active-slide {
+					cursor: default;
+					opacity: 1;
+				}
+			}
+
+			.flex-direction-nav a {
+				height: 30px;
+				margin: -20px 0 0;
+				width: 28px;
+
+				&:before {
+					font-size: 15px;
+					padding: 3px 10px;
 				}
 			}
 		}
