--- a/style.css
+++ b/style.css
@@ -1385,8 +1385,7 @@ a {
 .page-content,
 .entry-content,
 .entry-summary {
-  margin: 2em 0 0;
-  overflow-x: auto; }
+  margin: 2em 0 0; }
 
 .entry {
   margin-bottom: 5em; }
