Initial sidebar layout styling for WooCommerce

--- a/sass/woocommerce.scss
+++ b/sass/woocommerce.scss
@@ -3,6 +3,21 @@
 @import "mixins/bourbon";
 
 /*--------------------------------------------------------------
+# WooCommerce Layout
+--------------------------------------------------------------*/
+@import "woocommerce/layout";
+
+/*--------------------------------------------------------------
+# WooCommerce Checkout
+--------------------------------------------------------------*/
+@import "woocommerce/checkout";
+
+/*--------------------------------------------------------------
+# WooCommerce Cart
+--------------------------------------------------------------*/
+@import "woocommerce/cart";
+
+/*--------------------------------------------------------------
 # WooCommerce Single Product
 --------------------------------------------------------------*/
 @import "woocommerce/product";
