--- a/style.css
+++ b/style.css
@@ -916,20 +916,27 @@ a {
 /*--------------------------------------------------------------
 ## Breadcrumbs
 --------------------------------------------------------------*/
-.breadcrumbs {
+.breadcrumbs,
+.woocommerce .woocommerce-breadcrumb {
   color: #adadad;
-  font: 12px "Lato", sans-serif;
+  font-family: "Lato", sans-serif;
+  font-size: 12px;
   line-height: normal;
   margin-bottom: 24px;
   text-transform: uppercase; }
-  .breadcrumbs a {
+  .breadcrumbs a,
+  .woocommerce .woocommerce-breadcrumb a {
     color: #2d2d2d; }
-    .breadcrumbs a:hover {
+    .breadcrumbs a:hover,
+    .woocommerce .woocommerce-breadcrumb a:hover {
       color: #24c48a; }
   .breadcrumbs a,
-  .breadcrumbs span {
+  .breadcrumbs span,
+  .woocommerce .woocommerce-breadcrumb a,
+  .woocommerce .woocommerce-breadcrumb span {
     padding: 0 4px; }
-  .breadcrumbs .breadcrumb_last {
+  .breadcrumbs .breadcrumb_last,
+  .woocommerce .woocommerce-breadcrumb .breadcrumb_last {
     color: #adadad; }
 
 .breadcrumbs.bcn a,
