--- a/woocommerce.css
+++ b/woocommerce.css
@@ -15,26 +15,12 @@
       margin: 0;
       width: auto; } }
 
-.woocommerce #container {
-  float: left;
-  margin: 0 -25.61404% 0 0;
-  width: 100%; }
-  .no-active-sidebar .content-area {
-    float: none;
-    margin: 0;
-    width: auto; }
-  @media (max-width: 768px) {
-    .woocommerce #container {
-      float: none;
-      margin: 0;
-      width: auto; } }
-
-.woocommerce #content {
+.woocommerce .container #content {
   margin: 0 25.61404% 0 0; }
   .no-active-sidebar .site-main {
     margin: 0; }
   @media (max-width: 768px) {
-    .woocommerce #content {
+    .woocommerce .container #content {
       margin: 0; } }
 
 /*--------------------------------------------------------------
