Filter read more text
Filter read more text so we can apply styling to read more used in SiteOrigin Editor. Will also be useful if/when we add related settings.

--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -96,7 +96,7 @@
 	text-align: center;
 	text-decoration: none;
 	text-transform: uppercase;
-	margin-top: 70px;
+	padding-top: 30px;
 
 	.more-text {
 		border-top: 2px solid $color__background-hr-dark;
