--- a/style.css
+++ b/style.css
@@ -1481,7 +1481,7 @@ a {
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
-  margin-top: 70px; }
+  padding-top: 30px; }
   .more-link .more-text {
     border-top: 2px solid #ebebeb;
     border-bottom: 2px solid #ebebeb;
